remote/argocd/vpn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vpn
  labels:
    app.kubernetes.io/name: dd-vpn
    app.kubernetes.io/part-of: dd-remote-dev
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
