remote/argocd/vpn/dd-vpn-ui.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dd-vpn-ui
  namespace: vpn
  labels:
    app.kubernetes.io/name: dd-vpn
    app.kubernetes.io/component: wireguard
    app.kubernetes.io/part-of: dd-remote-dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dd-vpn
    app.kubernetes.io/component: wireguard
  ports:
    - name: http
      port: 51821
      targetPort: http
      protocol: TCP
